# skearything

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build-container.sh  compose.yml
.sqlx/: query-0e22e2b0b87e6075d2636b3101527e29f86c299552bca7346b0df30ab360a096.json  query-1c7174ffc3fb2c7cee25edff7c7f88d6619aecffe92fc2e1ef634b12a8fd1097.json  query-24a9b623f959fa5a3654fa2faa630bfc1c450b99cc55536b69f5daa508d15e02.json  query-2d490ff974543ba750d7a4701e469b4992f8431c3856bf8ff782d396791009c3.json  query-3f232f9ba183ba6c802a5e1fb79e69c43027f77c6f88e0e0507adacdb77cf8eb.json  query-566bc690bd59ec528ed3f4dad063e3ce4152787b6c902f07d0ab918bdb7fa0f9.json  query-5e580808619d0193db5e05df6c1934290fe4a42f9e7356f2074aae55faea7389.json  query-8b1e496b6f367eba06daac2282a6e956492211fb1d0a2547099ab0ff07148abb.json  query-a08e731b7a8ed203b3c83cb1ed74cbe9491a408dcff15fc3cd95882060e3ba2c.json  query-e90fbbf3c916b9b03b1256067a9f4a370771015e6b256ddc260aa183e29d649b.json  query-fc43b047007aaf819e5641ac85c1e4fc1ce91ba64c8ec9255a62cdc402445c9b.json
sql/: schema.sql
src/: main.rs  stats.rs  utils.rs
src/commands/: disable_daily_log.rs  disable_vc_logs.rs  mod.rs  set_msg_log_channel.rs  set_vc_log_channel.rs
