[package]
name = "skeary_thing"
version = "0.1.0"
edition = "2021"
default-run = "skeary_thing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenvy = "0.15.7"
serenity = "0.12.2"
tokio = { version = "1.40.0", features = ["full"] }
tokio-cron-scheduler = "0.11.0"
chrono-tz = "0.9.0"
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite"] }
